<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#673AB7"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="512dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="411.5dp"
        android:layout_height="0dp"
        app:cardCornerRadius="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTxtUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:drawableLeft="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:drawableTint="#5D5A5A"
                android:ems="10"
                android:hint="Username"
                android:textColorHint="#A5A4A9"
                app:guidelineUseRtl="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtViewLogin" />

            <EditText
                android:id="@+id/editTxtPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:drawableTint="#5D5A5A"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTxtUsername" />

            <TextView
                android:id="@+id/btnForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:text="@string/btnForgotPassword"
                android:textColor="#673AB7"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTxtPassword" />

            <TextView
                android:id="@+id/txtViewQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="104dp"
                android:text="@string/txtViewSignUp"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="456dp" />

            <TextView
                android:id="@+id/btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSignUp"
                android:textColor="#673AB7"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.059"
                app:layout_constraintStart_toEndOf="@+id/txtViewQuestion"
                tools:layout_editor_absoluteY="456dp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="40dp"
                android:text="@string/btnLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnForgotPassword" />

            <TextView
                android:id="@+id/txtViewLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/LoginTittle"
                android:textColor="#5D5A5A"
                android:textSize="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtViewTittle"
        android:layout_width="363dp"
        android:layout_height="107dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/WelcomeTittle"
        android:textColor="#FFFFFF"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.642" />

</androidx.constraintlayout.widget.ConstraintLayout>