<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="73dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:background="#DFDFDC"
                android:src="@mipmap/soslogo_foreground"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="411dp"
            android:layout_height="549dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:background="#FDF9FC">

            <TextView
                android:id="@+id/textView33"
                android:layout_width="190dp"
                android:layout_height="29dp"
                android:layout_marginTop="36dp"
                android:drawableLeft="@drawable/question_mark_svgrepo_com"
                android:drawablePadding="8dp"
                android:drawableTint="#5D5A5A"
                android:fontFamily="sans-serif-medium"
                android:text="@string/txtViewAbout"
                android:textSize="17dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="381dp"
                android:layout_height="357dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/txtViewAboutUsDesc"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView33"
                app:layout_constraintVertical_bias="0.173" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#673AB7"
            android:backgroundTint="#673AB7">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="106dp"
                android:layout_height="81dp"
                android:layout_marginStart="76dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.517">

                <ImageButton
                    android:id="@+id/btnHomeEC"
                    android:layout_width="62dp"
                    android:layout_height="60dp"
                    android:backgroundTint="#673AB7"
                    android:src="@drawable/home_1_svgrepo_com"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/txtViewHome"
                    android:textColor="#FFFFFF"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnHomeEC" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="137dp"
                android:layout_height="85dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.309"
                app:layout_constraintStart_toEndOf="@+id/constraintLayout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.52">

                <ImageButton
                    android:id="@+id/btnSettingsEC"
                    android:layout_width="60dp"
                    android:layout_height="57dp"
                    android:backgroundTint="#673AB7"
                    android:src="@drawable/settings_svgrepo_com"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.506"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/txtViewSettings"
                    android:textColor="#FFFFFF"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.551"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnSettingsEC"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>